# SlicerRtDoc

design/: vtkMRMLSegmentationNode use cases.docx
hardware/: Peg.par  ReferenceHolder_NoBase_v01.par  ReferenceHolder_v03.par  STP110 to Sonix BPC Adapter rev2.0 Bottom Half.par  STP110 to Sonix BPC Adapter rev2.0 Top Half.par  Sonix BPC to RTP STP110 Adapter Assembly.asm  Sonix BPC to RTP STP110 Adapter Assembly.cfg  Sonix BPC to RTP STP110 Adapter Assembly.stl  Sonix BPC to RTP STP110 Adapter Bottom Assembly.asm  Sonix BPC to RTP STP110 Adapter Bottom Assembly.cfg  Sonix BPC to RTP STP110 Adapter Bottom Half.stl  Sonix BPC to RTP STP110 Adapter Top Assembly.asm  Sonix BPC to RTP STP110 Adapter Top Assembly.cfg  Sonix BPC to RTP STP110 Adapter Top Half.stl
logo/: SlicerRT_Logo.xcf  SlicerRT_Logo_2.0.xcf
overview/: SlicerRT_Users.xlsx  SlicerRtArchitecture.pptx  SlicerRtOverview.pptx
references/: RadioTherapy.bib
samples/: testSlicer.bat
samples/PythonScripts/PatientHierarchyDataManipulation/: CMakeLists.txt  CreatePatientHierarchyTree.py  CreatePatientHierarchyTreeLogicFunctions.py  createSamplePatientHierarchyTree.py
technical/: MatlabBridgeDesign.pptx  OrthovoltageRT_DataFlowDiagram.pptx  Segmentations_20160526.pptx  SlicerRt_PatientHierarchy_Overview.pptx  SubjectHierarchy_NAMIC2014Jan.pptx
tutorials/: DoseAccumulationforAdaptiveRadiationTherapyTutorial_Dataset.txt  RegistrationParameterSets.pptx  SlicerRT_TutorialContestSummer2013.ppt  SlicerRT_TutorialIGRT_4.7.pptx  SlicerRT_Tutorial_DICOMRegistrationObject.pptx  SlicerRT_Tutorial_IGRT_4.11.pptx  (+9 more)
(+19 files in other folders)
